[gd_scene load_steps=30 format=3 uid="uid://cfl4dknvf61ks"]

[ext_resource type="Script" uid="uid://74pt42e6aeun" path="res://PÁGINAS/pagina7.gd" id="1_q8rpp"]
[ext_resource type="Texture2D" uid="uid://ccx5usgs8y7ig" path="res://IMAGENS/Páginas/7.png" id="2_guj63"]
[ext_resource type="Texture2D" uid="uid://bpsgi7ekpmh3" path="res://IMAGENS/Botões/ligar_som.png" id="3_guj63"]
[ext_resource type="Texture2D" uid="uid://dvkdxoe36ju13" path="res://IMAGENS/Botões/desligar_som.png" id="4_4ev1g"]
[ext_resource type="AudioStream" uid="uid://dh4jxrwlnjpes" path="res://ÁUDIOS/página 7.wav" id="5_4ev1g"]
[ext_resource type="Texture2D" uid="uid://b6d01m5wogpk7" path="res://IMAGENS/Página 7/23.png" id="6_kewiq"]
[ext_resource type="Texture2D" uid="uid://t528fh80kjug" path="res://IMAGENS/Página 7/24.png" id="7_4wiow"]
[ext_resource type="Texture2D" uid="uid://ctluynm5o4v0y" path="res://IMAGENS/Página 7/26.png" id="8_pqhox"]
[ext_resource type="Texture2D" uid="uid://bnt0sl1t6yrkq" path="res://IMAGENS/Página 7/25.png" id="9_dq4sd"]
[ext_resource type="Texture2D" uid="uid://6e8yk48yxrwq" path="res://IMAGENS/Página 7/27.png" id="10_dkjbk"]
[ext_resource type="Texture2D" uid="uid://nxgybjgg3bj8" path="res://IMAGENS/Página 7/28.png" id="11_lfahv"]
[ext_resource type="Texture2D" uid="uid://cssp0ny74r3wo" path="res://IMAGENS/Página 7/29.png" id="12_gfxvs"]
[ext_resource type="Script" uid="uid://b0pc0suiqfuj" path="res://PÁGINAS/fireworkbase.gd" id="13_kewiq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5vpc"]
size = Vector2(768, 427)

[sub_resource type="CircleShape2D" id="CircleShape2D_enbib"]
radius = 33.955853

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4wiow"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_pqhox"]
offsets = PackedFloat32Array(0, 0.16, 0.34, 0.52, 0.7266667, 0.88666666)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.3764706, 0, 1, 1, 1, 0, 1, 0, 1, 0.23137255, 1, 0, 0, 0.78039217, 1, 0.5411765, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dq4sd"]
gradient = SubResource("Gradient_pqhox")
width = 1
fill_to = Vector2(0, 1)

[sub_resource type="Curve" id="Curve_dkjbk"]
_data = [Vector2(0, 0.0066615343), 0.0, 2.4565334, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lfahv"]
curve = SubResource("Curve_dkjbk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gfxvs"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(150, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_lfahv")
sub_emitter_mode = 2
sub_emitter_amount_at_end = 32

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y5vpc"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_enbib"]
offsets = PackedFloat32Array(0.013392857, 0.17410715, 0.35267857, 0.53571427, 0.7276786, 0.91071427)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.59607846, 0, 1, 1, 1, 0, 1, 0, 0.7764706, 0, 1, 0, 0, 0.83137256, 1, 0.72156864, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7yxlf"]
gradient = SubResource("Gradient_enbib")
width = 1
fill_to = Vector2(1, 1)

[sub_resource type="Curve" id="Curve_csqyd"]
_data = [Vector2(0.020833336, 0.9693033), 0.0, 0.0, 0, 0, Vector2(0.9970238, 0), -1.5702417, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hw0ax"]
curve = SubResource("Curve_csqyd")

[sub_resource type="Gradient" id="Gradient_rfe48"]
offsets = PackedFloat32Array(0, 0.2795031, 0.5745342, 0.8447205)
colors = PackedColorArray(1, 0, 0, 1, 0, 0.69411767, 0, 1, 0, 0, 1, 1, 0.6862745, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h7mdh"]
gradient = SubResource("Gradient_rfe48")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_056wr"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 150.0
gravity = Vector3(0, 98, 0)
damping_max = 1000.00006
scale_min = 0.5
color_initial_ramp = SubResource("GradientTexture1D_h7mdh")
alpha_curve = SubResource("CurveTexture_hw0ax")

[node name="PAG7" type="Node2D"]
position = Vector2(384, 512)
script = ExtResource("1_q8rpp")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_guj63")

[node name="BotaoAnterior" type="TextureButton" parent="."]
offset_left = -340.0
offset_top = 396.0
offset_right = -114.0
offset_bottom = 454.0

[node name="BotaoProxima" type="TextureButton" parent="."]
offset_left = 130.0
offset_top = 397.0
offset_right = 355.0
offset_bottom = 454.0

[node name="BotaoSom" type="TextureButton" parent="."]
offset_left = 111.0
offset_top = -470.0
offset_right = 333.0
offset_bottom = -423.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_guj63")
texture_pressed = ExtResource("4_4ev1g")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4ev1g")
autoplay = true

[node name="ImagemParada" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -384.0
offset_top = -80.0
offset_right = 384.0
offset_bottom = 380.0
texture = ExtResource("6_kewiq")

[node name="LabelRespeito" type="Label" parent="."]
offset_left = -157.0
offset_top = 114.0
offset_right = 163.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "RESPEITO"

[node name="AlvoRespeito" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlvoRespeito"]
position = Vector2(3, 165.5)
shape = SubResource("RectangleShape2D_y5vpc")

[node name="ContainerBolas" type="Node2D" parent="."]

[node name="ToqueVermelho" type="Area2D" parent="ContainerBolas"]

[node name="Sprite2D" type="Sprite2D" parent="ContainerBolas/ToqueVermelho"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_4wiow")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerBolas/ToqueVermelho"]
shape = SubResource("CircleShape2D_enbib")

[node name="ToqueVerde" type="Area2D" parent="ContainerBolas"]

[node name="Sprite2D" type="Sprite2D" parent="ContainerBolas/ToqueVerde"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_pqhox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerBolas/ToqueVerde"]
shape = SubResource("CircleShape2D_enbib")

[node name="ToqueLaranja" type="Area2D" parent="ContainerBolas"]

[node name="Sprite2D" type="Sprite2D" parent="ContainerBolas/ToqueLaranja"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_dq4sd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerBolas/ToqueLaranja"]
shape = SubResource("CircleShape2D_enbib")

[node name="ToqueAmarelo" type="Area2D" parent="ContainerBolas"]

[node name="Sprite2D" type="Sprite2D" parent="ContainerBolas/ToqueAmarelo"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_dkjbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerBolas/ToqueAmarelo"]
shape = SubResource("CircleShape2D_enbib")

[node name="ToqueAzul" type="Area2D" parent="ContainerBolas"]

[node name="Sprite2D" type="Sprite2D" parent="ContainerBolas/ToqueAzul"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_lfahv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerBolas/ToqueAzul"]
shape = SubResource("CircleShape2D_enbib")

[node name="ToqueRoxo" type="Area2D" parent="ContainerBolas"]

[node name="Sprite2D" type="Sprite2D" parent="ContainerBolas/ToqueRoxo"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_gfxvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerBolas/ToqueRoxo"]
shape = SubResource("CircleShape2D_enbib")

[node name="Fogos" type="GPUParticles2D" parent="."]
z_index = 100
material = SubResource("CanvasItemMaterial_4wiow")
position = Vector2(1, 379)
scale = Vector2(2.5, 2.5)
emitting = false
amount = 5
sub_emitter = NodePath("../GPUParticles2D_SubParticels")
texture = SubResource("GradientTexture2D_dq4sd")
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_gfxvs")
script = ExtResource("13_kewiq")

[node name="GPUParticles2D_SubParticels" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_y5vpc")
emitting = false
amount = 1000
texture = SubResource("GradientTexture2D_7yxlf")
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_056wr")

[connection signal="body_entered" from="AlvoRespeito" to="." method="_on_alvo_respeito_body_entered"]
[connection signal="body_exited" from="AlvoRespeito" to="." method="_on_alvo_respeito_body_exited"]
